[package]
name = "apalis-pubsub"
version = "0.1.0"
edition = "2024"

[dependencies]
apalis-core = { version = "1.0.0-rc.2", features = ["sleep"] }
apalis-codec = { version = "0.1.0-rc.2", features = ["json"] }
google-cloud-pubsub = { version = "0.30.0", default-features = false, features = ["auth", "rustls-tls"] }
pin-project = "1.1.10"
serde = { version = "1", features = ["derive"] }
futures = "0.3.31"
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
apalis-core = { version = "1.0.0-rc.2" }
apalis = { version = "1.0.0-rc.2", default-features = false, features = [
    "retry",
] }
futures-util = "0.3"

[lib]
doc-scrape-examples = true
