[package]
name = "apalis-pubsub"
version = "0.1.0"
edition = "2021"
description = "An implementation of Google's Pub/Sub backend for apalis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/apalis-pubsub"

[dependencies]
apalis-core = { version = "1.0.0-rc.2", features = ["sleep"] }
apalis-codec = { version = "0.1.0-rc.2", features = ["json"] }
google-cloud-pubsub = { version = "0.30.0", default-features = false, features = [
    "auth",
    "rustls-tls",
] }
pin-project = "1.1.10"
serde = { version = "1", features = ["derive"] }
futures = "0.3.31"
thiserror = "2.0"
tower = "0.5"
tokio = { version = "1", features = ["sync", "rt"] }
tokio-stream = "0.1"
tokio-util = "0.7"
google-cloud-googleapis = "0.16.1"
tracing = "0.1"
uuid = "1.12.0"
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
apalis-core = { version = "1.0.0-rc.2" }
apalis = { version = "1.0.0-rc.2", default-features = false, features = [
    "retry",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
doc-scrape-examples = true
